fix(CODEOWNERS): Update Team Name

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 ############################################################
-# Repository Owner: @riskalyze/infrastructure
+# Repository Owner: @riskalyze/solo
 ############################################################
 
-*                       @riskalyze/infrastructure
+*                       @riskalyze/solo
 .github/CODEOWNERS      @riskalyze/codeowners
 
