fix: update settings.yml
riskalyze => nitrogen

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,6 +1,6 @@
 repository:
   name: quickstart
-  description: Start here to configure your laptop for development at Riskalyze
+  description: Start here to configure your laptop for development at Nitrogen
   private: false
 
 teams:
